fixing spacing on submit buttons

--- a/css/_caw_styles.scss
+++ b/css/_caw_styles.scss
@@ -809,6 +809,8 @@ form {
 .views-exposed-form .views-exposed-widget.views-reset-button,
 .views-exposed-form .views-exposed-widget.views-submit-button {
   padding-top: 0;
+}
+.views-exposed-form .views-exposed-widget .form-submit {
   margin-top: 25px;
 }
 .container-inline-date .form-item, .container-inline-date .form-item input,
